--- a/CE-110_Lab-Revision_Notes.ipynb
+++ b/CE-110_Lab-Revision_Notes.ipynb
@@ -2228,7 +2228,9 @@
   {
    "cell_type": "code",
    "execution_count": 309,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   },
@@ -2910,7 +2912,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.8"
   }
  },
  "nbformat": 4,
