--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -840,12 +840,24 @@
    "source": [
     "## 3. Pandas <a id='section 3'></a>\n",
     "\n",
-    "Knowing these few basic concepts about Python and Tables will help you interact with data in upcoming parts of the module. Here's a preview of the kinds of visualizations and operations coming up:"
+    "Pandas is a software library written for the Python programming language for data manipulation and analysis. In particular, it offers data structures and operations for manipulating numerical tables and time series. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "`pandas.DataFrame(data=None, index=None, columns=None, dtype=None, copy=False)[source]\n",
+    "Two-dimensional size-mutable, potentially heterogeneous tabular data structure with labeled axes (rows and columns). Arithmetic operations align on both row and column labels. Can be thought of as a dict-like container for Series objects. The primary pandas data structure."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -894,7 +906,7 @@
        "1     700  2015"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -903,6 +915,7 @@
     "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
     "%matplotlib inline\n",
+    "#creating a dataframe\n",
     "data = pd.DataFrame(data = \n",
     "                      {\"year\" : [2010, 2015], \n",
     "                       \"values\" : [500, 700]})   \n",
@@ -985,49 +998,10 @@
     }
    ],
    "source": [
+    "#plotting the bar graph from the dataframe\n",
     "data.plot(kind='bar',x='year', y='values');\n",
     "plt.title(\"Year vs Values\");\n",
     "plt.ylabel('Values');"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# look at the correlation between temperature and casual rider numbers\n",
-    "bikes.select(\"casual\", \"temp\").scatter(\"temp\", fit_line=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# compare scatter plots for casual and registered riders for different predictor variables\n",
-    "def scatter_bikes(predictor, response, fit_line):\n",
-    "    if response == \"both\":\n",
-    "        b = bikes.select(\"registered\", \"casual\", predictor)\n",
-    "    else:\n",
-    "        b = bikes.select(response, predictor)\n",
-    "    return b.scatter(predictor, fit_line=fit_line)\n",
-    "\n",
-    "# create the slider sfor the widget\n",
-    "predict_widget = widgets.Dropdown(options=[\"humidity\", \"windspeed\", \"temp\"],\n",
-    "                         value=\"humidity\")\n",
-    "response_widget = widgets.Dropdown(options=[\"casual\", \"registered\", \"both\"],\n",
-    "                         value=\"casual\")\n",
-    "fitline_widget = widgets.Dropdown(options=[True, False],\n",
-    "                          value=False)\n",
-    "\n",
-    "# create the widget to view plots for different parameter values\n",
-    "display(widgets.interactive(scatter_bikes, predictor=predict_widget, response=response_widget, fit_line=fitline_widget))"
    ]
   },
   {
