--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -844,20 +844,18 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "metadata": {},
    "source": [
-    "`pandas.DataFrame(data=None, index=None, columns=None, dtype=None, copy=False)[source]\n",
+    "`pandas.DataFrame(data=None, index=None, columns=None, dtype=None, copy=False)`\n",
+    "\n",
+    "\n",
     "Two-dimensional size-mutable, potentially heterogeneous tabular data structure with labeled axes (rows and columns). Arithmetic operations align on both row and column labels. Can be thought of as a dict-like container for Series objects. The primary pandas data structure."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -906,7 +904,7 @@
        "1     700  2015"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
