--- a/Introduction.ipynb
+++ b/Introduction.ipynb
@@ -838,168 +838,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3. Pandas <a id='section 3'></a>\n",
+    "## 3. Graph <a id='section 3'></a>\n",
     "\n",
-    "Pandas is a software library written for the Python programming language for data manipulation and analysis. In particular, it offers data structures and operations for manipulating numerical tables and time series. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`pandas.DataFrame(data=None, index=None, columns=None, dtype=None, copy=False)`\n",
-    "\n",
-    "\n",
-    "Two-dimensional size-mutable, potentially heterogeneous tabular data structure with labeled axes (rows and columns). Arithmetic operations align on both row and column labels. Can be thought of as a dict-like container for Series objects. The primary pandas data structure."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style>\n",
-       "    .dataframe thead tr:only-child th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: left;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>values</th>\n",
-       "      <th>year</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>500</td>\n",
-       "      <td>2010</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>700</td>\n",
-       "      <td>2015</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   values  year\n",
-       "0     500  2010\n",
-       "1     700  2015"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "import pandas as pd\n",
-    "%matplotlib inline\n",
-    "#creating a dataframe\n",
-    "data = pd.DataFrame(data = \n",
-    "                      {\"year\" : [2010, 2015], \n",
-    "                       \"values\" : [500, 700]})   \n",
-    "data"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Selecting Column"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`table[\"column name\"]` returns an array of the column of the table"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0    2010\n",
-       "1    2015\n",
-       "Name: year, dtype: int64"
-      ]
-     },
-     "execution_count": 11,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "#choose a column\n",
-    "data[\"year\"]"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Making a Bar Graph"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "You can use `table.plot(kind ='bar', x ='column1', y ='column2')` to create a bar graph from a dataframe,\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "`plt.title` allows you to name a title of the plot.\n",
-    "`plt.xlabel('name1')` and `plt.ylabel('name2')` allows you to label x-axis and y-axis"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYgAAAEmCAYAAAB4VQe4AAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAG1BJREFUeJzt3X+QXXV9//HnKySYFpBgCJAmgVCN\n/PpKAbeK47e1SHGECqH9go1FQYtNOwUp0LFQnU7tV2vRcbQy7VdLBQn9okBTlZRSKpOCtH5BTdAi\nkCIRhSyBEAIJBAYN8P7+cc/KspxkNyF37yb3+Zi5c8/5nM895707Z+9rz+fcc0+qCkmSRprU6wIk\nSROTASFJamVASJJaGRCSpFYGhCSplQEhSWplQEg7iCT/N8lHel2H+ocBoR1CkiuTXDai7S1J1iWZ\n2au6xirJryR5MsnPtyz7fpI/6EVd0pYYENpRnAOckOQ4gCRTgb8H/riqHtqeG0qyy/ZcH0BV/Qew\nBvitEds6ApgHXL29tym9XAaEdghVtQ74AHBJkt2APwd+WFWXAySZlORDSX6Y5NEkVyXZa9iyxUke\nTrI+yc1JDhladzN087dJbkjyFPArw7ed5N1JbhvR9sEkX2mm35FkRXOEMJjkvM38GFcAp49oOx1Y\nUlWPj1bniO2/P8nNw+YnJ6kkc5v5qUk+nWRVkjVJ/k8TqiTZJ8n1zTYeS3LLZn/x6msGhHYYVfWP\nwHLgy8BC4PeHLT4f+A3gV4HZwFPAxcOWX0fnP/X9gDuBfxix+t8B/gLYA7h1xLKvAf8jyS+O6P+l\nZvqLwJlVtQdwOPCNzfwIVwDHJJkFPztSeVfTPtY6x+pTwIFNPfOAucCHm2UfBO4DZjTb+bNt3IZ2\ncgaEdjRnAW8F/ndVPTCs/feBD1XVg1X1DPAR4J1JJlXV81V1eVU9OWzZ65sjkSFfrapbm74/Gb7B\nqtpI5417AUCSg4FfbNoANgGHJtmjqh6rqtvbCq+qHwPfBE5rmt5G52/whmb5WOocVZJJwPuBc6vq\n8ap6Avirofqben8B2L+qflpVmws09TkDQjuUqloDPArcNWLR/sA/N8Mm64HvAwXsk2SXJJ9Mcl+S\nJ4CVzWv2Hvb6VaNs+kt0/tuHzhv8V5o3cYDfBE4CHmiGhd64hfUs4oVhpvcAV1bVs9A5ohhDnWOx\nH/AK4L+G/T6uA/Zpll8E3A8sbYbkPriV61efMCC0sxgEjquqacMeU6vqYTpvyCfQOfLYE3hN85oM\ne/1oX2t8AzAryevoBMXQ8BJV9a2qOonOG/B1wFVbWM8/AgcmeQswnxcPL42lziFPAcM/EbXfsOk1\nwE+Bg4b9Lvasqj2bep+oqvOqai5wMnBBU4/0IgaEdhafBz6eZH/42YnYk5plewA/AdbReVP9y61d\neVX9FPgn4NPA7sC/N9v5uSS/k+SVVbUJeBJ4bgvr2Qh8hc6RxMqq+t6wxVtT538Bhyd5XZKfo3PS\nfmgbzwFfAP46yYx0zE7ytqbmE5O8OkmADU29m61Z/cuA0M7i03T+y1+a5Eng/wG/3Cz7IrC6edzV\nLNsWXwJ+Hbi6eRMecgZwfzMsdCadoaMtWQQcwIuPHraqzqq6G/g4cDNwDzDyk0h/TGcY6dt0QuDr\ndE5WAxxEJ+A20jkn8tmq+s9RalYfijcMkiS18QhCktTKgJAktTIgJEmtDAhJUisDQpLUanKvC3g5\n9t5775o7d26vy5CkHcry5csfraoZo/XboQNi7ty5LFu2rNdlSNIOJcn9Y+nnEJMkqZUBIUlqZUBI\nklrt0Ocg2mzatInBwUGeeeaZ0Tv3galTpzJ79mymTJnS61Ik7WB2uoAYHBxkjz32YO7cuXS+rLJ/\nVRXr1q1jcHCQAw88sNflSNrBdG2IKclBSb437PFEknOTvCrJjUnubZ6H7hucJBcnWZnkjiRHbct2\nn3nmGaZPn9734QCQhOnTp3s0JWmbdC0gquqeqjqiqo4AXg88DXwVuBBYWlXzgKXNPMDxdL6OeB6d\n+w1/blu3bTi8wN+FpG01XiepjwV+WFX307mL1qKmfRGdO1rRtF9RHbcB05LMHKf6emb33XfvdQmS\n1Gq8AmIB8OVmet+qegigeR66T+4sXnxf4MGm7UWSLEyyLMmytWvXjrrhmbP3J8l2e8ycvf/L+T1I\nE8r2/vvo98fO9v7Q9ZPUSXalc0P3Px2ta0vbS+5mVFWXAJcADAwMjHq3o4cfXMUBF1w3hkrH5v5P\nvGOLyy+44AIOOOAA/vAP/xCAj3zkIyThlltu4fHHH2fTpk187GMfY/78+S963c0338ynPvUprruu\nU+vZZ5/NwMAA733ve1m+fDnnn38+GzduZO+99+byyy9n5syZXHzxxXz+859n8uTJHHrooVx11ZZu\nhSy91Pb+++h3o70/7GjG41NMxwO3V9WaZn5NkplV9VAzhPRI0z4IzBn2utl0br24Q1mwYAHnnnvu\nzwLimmuu4YYbbuC8887jla98JY8++ihHH300J5100pjOD2zatIkPfOADXHvttcyYMYOrr76aD3/4\nw1x22WVcdNFF/OhHP+IVr3gF69ev7/aPJqnPjEdAvIsXhpcAltC5h+9FzfO1w9rPTnIV8EZgw9BQ\n1I7kyCOP5JFHHmH16tWsXbuWvfbai5kzZ3Leeedxyy23MGnSJB588EHWrFnDfvvtN+r67rnnHu68\n806OO+44AJ577jlmzuycmjn88MM57bTTOPnkkzn55JO3tBpJ2mpdDYgkPw8cB/z+sOaLgGuSnAk8\nAJzatF8PnACspPOJp/d1s7ZuOuWUU1i8eDEPP/wwCxYs4Morr2Tt2rUsX76cKVOmMHfu3Jd89HTy\n5Mk8//zzP5sfWl5VHHbYYdx6660v2c6//Mu/cMstt7BkyRI++tGPctdddzF58k53aYukHunqSeqq\nerqqplfVhmFt66rq2Kqa1zw/1rRXVZ1VVa+uqtdV1Q77Na0LFizgqquuYvHixZxyyils2LCBffbZ\nhylTpnDTTTdx//0v/SLFAw44gLvvvpuf/OQnbNiwgaVLlwJw0EEHsXbt2p8FxKZNm7jrrrt4/vnn\nWbVqFccccwyf/OQnWb9+PRs3bhzXn1PSzs1/N7vgsMMO48knn2TWrFnMnDmT0047jRNPPJGBgQGO\nOOIIDj744Je8Zs6cObzzne/k8MMPZ968eRx55JEA7LrrrixevJhzzjmHDRs28Oyzz3Luuefy2te+\nlne/+91s2LCBquK8885j2rRp4/2jStqJpWrUDwJNWAMDAzXyfhArVqzgkEMO+dn8zNn78/CDq0a+\ndJvtN2sODw0+sN3WNx5G/k6kIUn8FNN2dP8n3sGO8J6aZHlVDYzWb6c/gtjR3swlaaLw674lSa0M\nCElSq50yIHaEMcDx4u9C0rba6QJi6tSprFu3zjdGXrgfxNSpU3tdiqQd0E53knr27NkMDg4yli/y\n6wdDd5STpK210wXElClTvHuaJG0HO90QkyRp+zAgJEmtDAhJUisDQpLUyoCQJLUyICRJrQwISVIr\nA0KS1MqAkCS1MiAkSa0MCElSq64GRJJpSRYn+e8kK5K8KcmrktyY5N7mea+mb5JcnGRlkjuSHNXN\n2iRJW9btI4jPAjdU1cHALwErgAuBpVU1D1jazAMcD8xrHguBz3W5NknSFnQtIJK8EvhV4FKAqvpp\nVa0H5gOLmm6LgJOb6fnAFdVxGzAtycxu1SdJ2rJuHkH8IrAW+GKS7yb5QpLdgH2r6iGA5nmfpv8s\nYNWw1w82bZKkHuhmQEwGjgI+V1VHAk/xwnBSm7S0veS2cEkWJlmWZJk3BZKk7ulmQAwCg1X1rWZ+\nMZ3AWDM0dNQ8PzKs/5xhr58NrB650qq6pKoGqmpgxowZXStekvpd1wKiqh4GViU5qGk6FrgbWAKc\n0bSdAVzbTC8BTm8+zXQ0sGFoKEqSNP66fcvRDwBXJtkVuA94H51QuibJmcADwKlN3+uBE4CVwNNN\nX0lSj3Q1IKrqe8BAy6JjW/oWcFY365EkjZ1XUkuSWhkQkqRWBoQkqZUBIUlqZUBIkloZEJKkVgaE\nJKmVASFJamVASJJaGRCSpFYGhCSplQEhSWplQEiSWhkQkqRWBoQkqZUBIUlqZUBIkloZEJKkVgaE\nJKmVASFJamVASJJadTUgkvw4yfeTfC/JsqbtVUluTHJv87xX054kFydZmeSOJEd1szZJ0paNxxHE\nMVV1RFUNNPMXAkurah6wtJkHOB6Y1zwWAp8bh9okSZvRiyGm+cCiZnoRcPKw9iuq4zZgWpKZPahP\nkkT3A6KArydZnmRh07ZvVT0E0Dzv07TPAlYNe+1g0yZJ6oHJXV7/m6tqdZJ9gBuT/PcW+qalrV7S\nqRM0CwH233//7VNll82cvT8PP7hq9I4ak/1mzeGhwQd6XYa00+tqQFTV6ub5kSRfBd4ArEkys6oe\naoaQHmm6DwJzhr18NrC6ZZ2XAJcADAwMvCRAJqKHH1zFARdc1+sydhr3f+IdvS5B6gtdG2JKsluS\nPYamgbcBdwJLgDOabmcA1zbTS4DTm08zHQ1sGBqKkiSNv24eQewLfDXJ0Ha+VFU3JPkOcE2SM4EH\ngFOb/tcDJwArgaeB93WxNknSKLoWEFV1H/BLLe3rgGNb2gs4q1v1SJK2jldSS5JaGRCSpFYGhCSp\nlQEhSWplQEiSWhkQkqRWBoQkqZUBIUlqZUBIkloZEJKkVgaEJKmVASFJamVASJJaGRCSpFYGhCSp\nlQEhSWplQEiSWhkQkqRWBoQkqdVWBUSSSUle2a1iJEkTx6gBkeRLSV6ZZDfgbuCeJB8c6waS7JLk\nu0mua+YPTPKtJPcmuTrJrk37K5r5lc3yudv2I0mStoexHEEcWlVPACcD1wP7A+/Zim38EbBi2Pwn\ngM9U1TzgceDMpv1M4PGqeg3wmaafJKlHxhIQU5JMoRMQ11bVJqDGsvIks4HfAL7QzAd4K7C46bKo\nWS/A/GaeZvmxTX9JUg+MJSD+DvgxsBtwS5IDgCfGuP6/Bv4EeL6Znw6sr6pnm/lBYFYzPQtYBdAs\n39D0lyT1wKgBUVUXV9WsqjqhOu4HjhntdUneATxSVcuHN7dtYgzLhq93YZJlSZatXbt2tDIkSdto\nLCep901yaZJ/beYPBc4Yw7rfDJyU5MfAVXSGlv4amJZkctNnNrC6mR4E5jTbmAzsCTw2cqVVdUlV\nDVTVwIwZM8ZQhiRpW4xliOly4N+AX2jmfwCcO9qLqupPq2p2Vc0FFgD/XlWnATcBpzTdzgCubaaX\n8ELwnNL0H9O5DknS9jeWgNi7qq6hOY/QnB947mVs8wLg/CQr6ZxjuLRpvxSY3rSfD1z4MrYhSXqZ\nJo/ehaeSTKc5H5DkaDonkMesqm4Gbm6m7wPe0NLnGeDUrVmvJKl7xhIQ59MZ/nl1km8CM3hhiEiS\ntJMaNSCq6vYkbwEOovNJo3uaayEkSTuxUQMiyekjmo5KQlVd0aWaJEkTwFiGmH552PRU4FjgdsCA\nkKSd2FiGmD4wfD7JnsA/dK0iSdKEsC33g3gamLe9C5EkTSxjOQfxz7zwlReTgEOBa7pZlCSp98Zy\nDuJTw6afBe6vqsEu1SNJmiDGcg7iG+NRiCRpYtlsQCR5kvb7PgSoqvLWo5K0E9tsQFTVHuNZiCRp\nYhnLOQgAkuxD5zoIAKrqga5UJEmaEMZyP4iTktwL/Aj4Bp27y/1rl+uSJPXYWK6D+ChwNPCDqjqQ\nzpXU3+xqVZKknhtLQGyqqnXApCSTquom4Igu1yVJ6rGxnINYn2R34D+AK5M8Qud6CEnSTmyzRxBJ\n/ibJm4H5dL5e41zgBuCHwInjU54kqVe2dARxL52rqGcCVwNfrqpF41KVJKnnNnsEUVWfrao3AW8B\nHgO+mGRFkj9L8tpxq1CS1BOjnqSuqvur6hNVdSTwO8BvASu6XpkkqafGch3ElCQnJrmSzvUPPwD+\nV9crkyT11JZOUh+X5DJgEFgIXA+8uqp+u6q+NtqKk0xN8u0k/5XkriR/0bQfmORbSe5NcnWSXZv2\nVzTzK5vlc7fHDyhJ2jZbOoL4EHArcEhVnVhVV1bVU1ux7p8Ab62qX6Jz3cTbkxwNfAL4TFXNAx4H\nzmz6nwk8XlWvAT7T9JMk9ciWTlIfU1V/X1WPbcuKq2NjMzuleRTwVmBx074IOLmZnt/M0yw/Nkm2\nZduSpJdvW245OmZJdknyPeAR4EY611Csr6qhC+0GgVnN9CxgFUCzfAMwvZv1SZI2r6sBUVXPVdUR\nwGzgDcAhbd2a57ajhZfcjyLJwiTLkixbu3bt9itWkvQiXQ2IIVW1HriZzpf+TUsydIHebGB1Mz0I\nzAFolu9J5/qLkeu6pKoGqmpgxowZ3S5dkvpW1wIiyYwk05rpnwN+nc71EzcBpzTdzgCubaaXNPM0\ny/+9qtruaCdJGgdjvmHQNpgJLEqyC50guqaqrktyN3BVko8B3wUubfpfCvxDkpV0jhwWdLE2SdIo\nuhYQVXUHcGRL+310zkeMbH8GOLVb9UiSts64nIOQJO14DAhJUisDQpLUyoCQJLUyICRJrQwISVIr\nA0KS1MqAkCS1MiAkSa0MCElSKwNCktTKgJAktTIgJEmtDAhJUisDQpLUyoCQJLUyICRJrQwISVIr\nA0KS1MqAkCS16lpAJJmT5KYkK5LcleSPmvZXJbkxyb3N815Ne5JcnGRlkjuSHNWt2iRJo+vmEcSz\nwB9X1SHA0cBZSQ4FLgSWVtU8YGkzD3A8MK95LAQ+18XaJEmj6FpAVNVDVXV7M/0ksAKYBcwHFjXd\nFgEnN9PzgSuq4zZgWpKZ3apPkrRl43IOIslc4EjgW8C+VfUQdEIE2KfpNgtYNexlg02bJKkHuh4Q\nSXYH/gk4t6qe2FLXlrZqWd/CJMuSLFu7du32KlOSNEJXAyLJFDrhcGVVfaVpXjM0dNQ8P9K0DwJz\nhr18NrB65Dqr6pKqGqiqgRkzZnSveEnqc938FFOAS4EVVfXpYYuWAGc002cA1w5rP735NNPRwIah\noShJ0vib3MV1vxl4D/D9JN9r2j4EXARck+RM4AHg1GbZ9cAJwErgaeB9XaxNkjSKrgVEVf0n7ecV\nAI5t6V/AWd2qR5K0dbySWpLUyoCQJLUyICRJrQwISVIrA0KS1MqAkCS1MiAkSa0MCElSKwNCktTK\ngJAktTIgJEmtDAhJUisDQpLUyoCQJLUyICRJrQwISVIrA0KS1MqAkCS1MiAkSa0MCElSKwNCktSq\nawGR5LIkjyS5c1jbq5LcmOTe5nmvpj1JLk6yMskdSY7qVl2SpLHp5hHE5cDbR7RdCCytqnnA0mYe\n4HhgXvNYCHyui3VJksagawFRVbcAj41ong8saqYXAScPa7+iOm4DpiWZ2a3aJEmjG+9zEPtW1UMA\nzfM+TfssYNWwfoNNmySpRybKSeq0tFVrx2RhkmVJlq1du7bLZUlS/xrvgFgzNHTUPD/StA8Cc4b1\nmw2sbltBVV1SVQNVNTBjxoyuFitJ/Wy8A2IJcEYzfQZw7bD205tPMx0NbBgaipIk9cbkbq04yZeB\nXwP2TjII/DlwEXBNkjOBB4BTm+7XAycAK4Gngfd1qy5J0th0LSCq6l2bWXRsS98CzupWLZKkrTdR\nTlJLkiYYA0KS1MqAkCS1MiAkSa0MCElSKwNCktTKgJAktTIgJEmtDAhJUisDQpLUyoCQJLUyICRJ\nrQwISVIrA0KS1MqAkCS1MiAkSa0MCElSKwNCktTKgJAktTIgJEmtDAhJUqsJFRBJ3p7kniQrk1zY\n63okqZ9NmIBIsgvwt8DxwKHAu5Ic2tuqJKl/TZiAAN4ArKyq+6rqp8BVwPwe1yRJfStV1esaAEhy\nCvD2qnp/M/8e4I1VdfaIfguBhc3sQcA941rozm1v4NFeFyG1cN/cvg6oqhmjdZo8HpWMUVraXpJe\nVXUJcEn3y+k/SZZV1UCv65BGct/sjYk0xDQIzBk2PxtY3aNaJKnvTaSA+A4wL8mBSXYFFgBLelyT\nJPWtCTPEVFXPJjkb+DdgF+Cyqrqrx2X1G4fuNFG5b/bAhDlJLUmaWCbSEJMkaQIxICRJrQwISVIr\nA0KS1GrCfIpJ4y/JwXS+zmQWnYsSVwNLqmpFTwuThknyP+l8Fc+dVfX1XtfTTzyC6FNJLqDzfVcB\nvk3nOpQAX/abdNVLSb49bPr3gL8B9gD+3H1zfPkx1z6V5AfAYVW1aUT7rsBdVTWvN5Wp3yX5blUd\n2Ux/BzihqtYm2Q24rape19sK+4dHEP3reeAXWtpnNsukXpmUZK8k0+n8E7sWoKqeAp7tbWn9xXMQ\n/etcYGmSe4FVTdv+wGuAszf7Kqn79gSW0xnyrCT7VdXDSXan/Us91SUOMfWxJJPonPybRecPbxD4\nTlU919PCpBZJfh7Yt6p+1Ota+oUBoZdIsntVbex1HdJI7pvjy3MQanN3rwuQNsN9cxx5DqJPJTl/\nc4uA3cezFmk4982JwyOI/vVxYC86ny8f/tgd9wv1lvvmBOERRP+6HfhaVS0fuSDJ+3tQjzTEfXOC\n8CR1n0pyEPDY0GfMRyzbt6rW9KAsyX1zAjEgJEmtHM/rU0n2THJRkv9Osq55rGjapvW6PvUv982J\nw4DoX9cAjwO/VlXTq2o6cEzT9o89rUz9zn1zgnCIqU8luaeqDtraZVK3uW9OHB5B9K/7k/xJkn2H\nGpLs23wN+KotvE7qNvfNCcKA6F+/DUwHvpHk8SSPATcDrwLe2cvC1PfcNycIh5j6WHNHudl0vmN/\n47D2t1fVDb2rTP3OfXNi8AiiTyU5B7iWzld735lk/rDFH+9NVZL75kTildT96/eA11fVxiRzgcVJ\n5lbVZ/E799Vb7psThAHRv3YZOnSvqh8n+TU6f4gH4B+hest9c4JwiKl/PZzkiKGZ5g/yHcDegPf8\nVS+5b04QnqTuU0lmA89W1cMty95cVd/sQVmS++YEYkBIklo5xCRJamVASJJaGRCSpFYGhNRjSXbp\ndQ1SGwNC2gpJPprkj4bN/2WSc5J8MMl3ktyR5C+GLf9akuVJ7kqycFj7xiT/O8m3gDeN848hjYkB\nIW2dS4EzAJJMAhYAa4B5wBuAI4DXJ/nVpv/vVtXrgQHgnCTTm/bdgDur6o1V9Z/j+QNIY+WV1NJW\naK7sXZfkSGBf4LvALwNva6YBdqcTGLfQCYXfbNrnNO3rgOeAfxrP2qWtZUBIW+8LwHuB/YDLgGOB\nv6qqvxveqfmKiF8H3lRVTye5GZjaLH6mqp4br4KlbeEQk7T1vgq8nc6Rw781j99NsjtAkllJ9gH2\nBB5vwuFg4OheFSxtC48gpK1UVT9NchOwvjkK+HqSQ4BbkwBsBN4N3AD8QZI7gHuA23pVs7Qt/KoN\naSs1J6dvB06tqnt7XY/ULQ4xSVshyaHASmCp4aCdnUcQkqRWHkFIkloZEJKkVgaEJKmVASFJamVA\nSJJaGRCSpFb/H3dOag53lz8mAAAAAElFTkSuQmCC\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x10bb11ac8>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "#plotting the bar graph from the dataframe\n",
-    "data.plot(kind='bar',x='year', y='values');\n",
-    "plt.title(\"Year vs Values\");\n",
-    "plt.ylabel('Values');"
+    "We will learn how to create a bar graph from a table."
    ]
   },
   {
